# modelscope-mcp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  justfile  main.py  pyproject.toml
.github/workflows/: docker.yaml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
app/: __init__.py  config.py  exceptions.py  models.py  routes.py  service.py
