[project]
name = "modelscope-mcp"
version = "0.1.0"
description = "A simple REST API wrapper for ModelScope MCP SDK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.1",
    "modelscope>=1.31.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "tenacity>=9.1.2",
]
